Fixed scrollbar

--- a/info.css
+++ b/info.css
@@ -376,7 +376,7 @@ h2 {
 }
 
 body::-webkit-scrollbar-track {
-    background-color: #F98125;
+    background-color: #F5F5F5;
 }
 
 body::-webkit-scrollbar {
